--- a/src/app/dimot/dimot.component.html
+++ b/src/app/dimot/dimot.component.html
@@ -316,8 +316,8 @@
     </div>
     <br />
     <div class="row">
-        <div class="col-6" id="docCount"></div>
-        <div class="col-6" id="techCount"></div>
+        <div class="col-2"></div><div class="col-8" id="docCount"></div><div class="col-2"></div>
+        <!-- <div class="col-6" id="techCount"></div> -->
     </div>
     <br />
     <div class="row">
