--- a/src/app/quality-measures-dashboard/quality-measures-dashboard.component.html
+++ b/src/app/quality-measures-dashboard/quality-measures-dashboard.component.html
@@ -50,7 +50,7 @@
 
 <div class="container mt-4" dir="rtl" [formGroup]="searchCard">
   <div class="row">
-    <div class="col-3">
+    <div class="col-2">
       <mat-form-field appearance="fill">
         <mat-label>לפי שנה: </mat-label>
         <mat-select multiple formControlName="years">
@@ -64,10 +64,10 @@
         <mat-datepicker #picker1></mat-datepicker>
       </mat-form-field> -->
     </div>
-    <div class="col-3">
+    <div class="col-2">
       <mat-form-field appearance="fill">
         <mat-label>לפי חודשים</mat-label>
-        <mat-select multiple formControlName="months">
+        <mat-select multiple formControlName="months" (selectionChange)="monthsQuarterDevider()">
           <mat-option *ngFor="let month of monthsList" [value]="month">{{month}}</mat-option>
         </mat-select>
       </mat-form-field>
@@ -78,11 +78,11 @@
         <mat-datepicker #picker2></mat-datepicker>
       </mat-form-field> -->
     </div>
-    <div class="col-3">
+    <div class="col-5">
       <mat-form-field appearance="fill">
         <mat-label>מדד</mat-label>
         <mat-select formControlName="measureID">
-          <mat-option value="option1">01-16-3-04-001</mat-option>
+          <mat-option [value]="type.Measure_Code" *ngFor="let type of QMTypes">{{type.Measure_Desc}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
@@ -90,7 +90,8 @@
       <mat-form-field appearance="fill">
         <mat-label>מחלקה</mat-label>
         <mat-select formControlName="department">
-          <mat-option value="option1">פנימית ב</mat-option>
+          <mat-option *ngFor="let dept of departments_list"
+            [value]="dept.Department_Code">{{dept.Department_Name}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
@@ -105,28 +106,59 @@
         <mat-radio-button value="Q3">Q3</mat-radio-button>
         <mat-radio-button value="Q4">Q4</mat-radio-button>
       </mat-radio-group>
-
     </div>
     <div class="col-6">
       <button mat-raised-button class="srch-btn" color="primary" (click)="searchMeasures()">חפש</button>
+      <button mat-raised-button class="srch-btn" color="warn" (click)="clearSearch()">נקה</button>
     </div>
   </div>
 </div>
-
 <div class="container mt-4" dir="rtl">
-  <mat-tab-group (selectedTabChange)="loadCharts($event)">
-    <mat-tab label="Table">
-      <table mat-table [dataSource]="data" class="mat-elevation-z8">
-        <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-          <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-          <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+  <mat-tab-group (selectedTabChange)="loadCharts($event.index)">
+    <mat-tab label="טבלה">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="measure_code">
+          <th mat-header-cell *matHeaderCellDef> קוד מדד </th>
+          <td mat-cell *matCellDef="let element"> {{element.Measure_Code}} </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+        <ng-container matColumnDef="measure_desc">
+          <th mat-header-cell *matHeaderCellDef> תיאור מדד </th>
+          <td mat-cell *matCellDef="let element"> {{element.Measure_Desc}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="department">
+          <th mat-header-cell *matHeaderCellDef> מחלקה </th>
+          <td mat-cell *matCellDef="let element"> {{element.Department_Name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="quarter">
+          <th mat-header-cell *matHeaderCellDef> רבעון </th>
+          <td mat-cell *matCellDef="let element"> {{element.Measure_TimeLine}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="year">
+          <th mat-header-cell *matHeaderCellDef> שנה </th>
+          <td mat-cell *matCellDef="let element"> {{element.Year}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="value">
+          <th mat-header-cell *matHeaderCellDef> ערך </th>
+          <td mat-cell *matCellDef="let element"> {{element.Value}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="target">
+          <th mat-header-cell *matHeaderCellDef> יעד </th>
+          <td mat-cell *matCellDef="let element"> {{element.Target}} </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </mat-tab>
-    <mat-tab label="Charts">
+    <mat-tab label="גרף">
       <div>
         <canvas id="myChart"></canvas>
       </div>
