--- a/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgery-rooms-menu.component.css
@@ -22,6 +22,13 @@ span {
     margin: 60px;
 }
 
+.card-img{
+    margin: 10px;
+    padding: 0px;
+    text-align: center;
+    height: 85%;
+}
+
 b {
     border-style: ridge;
     padding: 4px 8px 0px 8px;
