--- a/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
+++ b/src/app/surgery-calendar/surgery-rooms-menu/surgeries-management/surgeries-management.component.html
@@ -22,9 +22,9 @@
   </div>
   <div class="col-md-4">
     <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'he' }}</h3>
-    <button mat-raised-button  (click)="getPatientsQueues()">מקור</button>
-    <button mat-raised-button style="background-color: cornflowerblue;" (click)="filterDepartment('undo')">כל
-      המחלקות</button>
+    <button mat-raised-button (click)="getPatientsQueues()" style="margin-left: 20px;">מקור</button>
+    <!-- <button mat-raised-button style="background-color: cornflowerblue;" (click)="filterDepartment('undo')">כל
+      המחלקות</button> -->
     <button mat-raised-button (click)="sortSurgeriesOfEachRoomInDay()">תכנון</button>
   </div>
   <div class="col-md-3">
