--- a/src/app/wagon/wagon.component.html
+++ b/src/app/wagon/wagon.component.html
@@ -68,6 +68,19 @@
                                     </div>
                                 </td>
                             </ng-container>
+                            <ng-container matColumnDef="deleteWagon">
+                                <th mat-header-cell *matHeaderCellDef width="50">
+                                    מחיקה
+                                </th>
+                                <td mat-cell *matCellDef="let element">
+                                    <div class="example-button-container">
+                                        <button (click)="deleteRow(element)" class="row-data" mat-mini-fab
+                                            color="primary">
+                                            <mat-icon>delete</mat-icon>
+                                        </button>
+                                    </div>
+                                </td>
+                            </ng-container>
 
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
