--- a/src/app/orders-to-appointments/orders-to-appointments.component.html
+++ b/src/app/orders-to-appointments/orders-to-appointments.component.html
@@ -7,6 +7,12 @@
                     <div dir="rtl" class="card-body">
                         <form class="form">
                             <div class="row">
+                                <div class="col-12">
+                                    <mat-form-field>
+                                        <mat-label>מלל חופשי</mat-label>
+                                        <input matInput [(ngModel)]="freeTxt"  [ngModelOptions]="{standalone: true}">
+                                    </mat-form-field>
+                                </div>
                                 <div class="col">
                                     <div class="form-group">
                                         <mat-form-field>
