--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -360,13 +360,16 @@
                                                 <mat-radio-button class="radio-style" value="לא בוצע">
                                                     <span>לא בוצע</span>
                                                 </mat-radio-button>
-                                                <mat-radio-button *ngIf="action.ActionList == 'הנשמה ב LMA'" class="radio-style" value="בוצע קדם ביה'ח">
+                                                <mat-radio-button *ngIf="action.ActionList == 'הנשמה ב LMA'"
+                                                    class="radio-style" value="בוצע קדם ביה'ח">
                                                     <span>בוצע קדם ביה'ח</span>
                                                 </mat-radio-button>
-                                                <mat-radio-button *ngIf="action.ActionList == 'אינטובציה'" class="radio-style" value="בוצע קדם ביה'ח">
+                                                <mat-radio-button *ngIf="action.ActionList == 'אינטובציה'"
+                                                    class="radio-style" value="בוצע קדם ביה'ח">
                                                     <span>בוצע קדם ביה'ח</span>
                                                 </mat-radio-button>
-                                                <mat-radio-button *ngIf="action.ActionList == 'החדרת עירוי / I.O'" class="radio-style" value="בוצע קדם ביה'ח">
+                                                <mat-radio-button *ngIf="action.ActionList == 'החדרת עירוי / I.O'"
+                                                    class="radio-style" value="בוצע קדם ביה'ח">
                                                     <span>בוצע קדם ביה'ח</span>
                                                 </mat-radio-button>
                                             </div>
@@ -1132,7 +1135,8 @@
         </div>
     </div>
 
-    <h1 class="text-center" style="page-break-before: always;" *ngIf="CprFormsList[0].firstTableArray2.length > 0">נספח</h1>
+    <h1 class="text-center" style="page-break-before: always;" *ngIf="CprFormsList[0].firstTableArray2.length > 0">נספח
+    </h1>
     <div class="container1 m-2" style="margin-top: 5px;display: grid;"
         *ngIf="CprFormsList[0].firstTableArray2.length > 0" dir="rtl">
         <div class="header">
