--- a/src/app/form-dashboard/bone-marrow/bone-marrow.component.html
+++ b/src/app/form-dashboard/bone-marrow/bone-marrow.component.html
@@ -109,11 +109,8 @@
             <h1 class="text-center pos-abs-center"><u>אספרציה מח עצם</u></h1>
         </div>
         <div class="row" dir="rtl" style="display: flex;">
-            <div class="col-6" style="width: 50%;text-align: center;">
-                <p>תאריך: {{elementToPrint.DateOfForm}}</p>
-            </div>
-            <div class="col-6" style="width: 50%;text-align: center;">
-                <p>שעה: {{elementToPrint.TimeOfForm}}</p>
+            <div class="col-12" style="width: 100%;text-align: center;">
+                <p>תאריך: {{elementToPrint.ReceiveDate}}</p>
             </div>
         </div>
         <div class="row" dir="rtl" style="display: flex;border-style: outset;">
