--- a/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.html
+++ b/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.html
@@ -2,7 +2,9 @@
     <mat-toolbar class="header">
         <span>שליחת הודעות וואטסאפ</span>
     </mat-toolbar>
-
+    <div class="row">
+        <h2>תיבת חיפוש</h2>
+    </div>
     <div class="search-bar" [formGroup]="searchForm">
         <mat-form-field>
             <input matInput formControlName="byPhone" placeholder="לפי מספר טלפון">
@@ -33,15 +35,15 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> שם מקבל הודעה </th>
-            <td mat-cell *matCellDef="let row"> {{row.column1}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.Recipient}} </td>
         </ng-container>
         <ng-container matColumnDef="number">
             <th mat-header-cell *matHeaderCellDef> מספר טלפון </th>
-            <td mat-cell *matCellDef="let row"> {{row.column2}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.Phone_Number}} </td>
         </ng-container>
         <ng-container matColumnDef="content">
             <th mat-header-cell *matHeaderCellDef> תוכן ההודעה </th>
-            <td mat-cell *matCellDef="let row"> {{row.column3}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.Message_Content}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -49,7 +51,7 @@
     </table>
 
 
-
+    <hr>
     <div class="block">
         <div class="row mb-3">
             <mat-slide-toggle (click)="changeScreens()">{{screenTitle}}</mat-slide-toggle>
