--- a/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.css
+++ b/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.css
@@ -35,3 +35,9 @@ table {
 .container {
     padding-bottom: 100px;
 }
+
+@media screen and (max-width: 768px) {
+    .dynamic-fields {
+        display: block;
+    }
+}
