--- a/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.html
+++ b/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.html
@@ -24,17 +24,20 @@
             </mat-select>
         </mat-form-field>
         <div class="example-button-container">
-            <button mat-fab style="background-color: #00a884;color: whitesmoke;"
+            <button mat-fab style="background-color: #00a884;color: whitesmoke;" matTooltip="חפש"
                 aria-label="Example icon button with a search icon" (click)="startSearch()">
                 <mat-icon>search</mat-icon>
             </button>
         </div>
     </div>
 
-
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="sender">
+            <th mat-header-cell *matHeaderCellDef> שולח ההודעה </th>
+            <td mat-cell *matCellDef="let row"> {{row.SenderIDFK}} </td>
+        </ng-container>
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> שם מקבל הודעה </th>
+            <th mat-header-cell *matHeaderCellDef> מקבל ההודעה </th>
             <td mat-cell *matCellDef="let row"> {{row.Recipient}} </td>
         </ng-container>
         <ng-container matColumnDef="number">
@@ -45,30 +48,34 @@
             <th mat-header-cell *matHeaderCellDef> תוכן ההודעה </th>
             <td mat-cell *matCellDef="let row"> {{row.Message_Content}} </td>
         </ng-container>
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> תאריך שליחה </th>
+            <td mat-cell *matCellDef="let row"> {{row.Sent_Time}} </td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-
     <hr>
     <div class="block">
-        <div class="row mb-3">
-            <mat-slide-toggle (click)="changeScreens()">{{screenTitle}}</mat-slide-toggle>
+        <div class="row mb-3" style="display: block;">
+            <mat-slide-toggle (click)="changeScreens()" style="float: right;">{{screenTitle}}</mat-slide-toggle>
+            <button mat-icon-button *ngIf="!typeOfScreen" color="warn" matTooltip="ניקוי הכל" (click)="deleteAllRow()">
+                <mat-icon>clear</mat-icon>
+            </button>
         </div>
         <!-- SEND THE SAME MESSAGE TO MANY CONTACTS -->
         <div class="dynamic-inputs" [formGroup]="manyContacts" *ngIf="typeOfScreen">
             <div class="dynamic-fields">
                 <mat-form-field>
-                    <textarea matInput placeholder="מספרי טלפון*" rows="2"
-                        formControlName="ContactPhoneNumber"></textarea>
+                    <textarea matInput placeholder="מספרי טלפון מופרדים עם פסיק*" rows="3" formControlName="Phone_Number"></textarea>
                 </mat-form-field>
                 <mat-form-field>
-                    <textarea matInput placeholder="תוכן*" rows="2" formControlName="ContactContent"></textarea>
+                    <textarea matInput placeholder="תוכן ההודעה*" rows="3" formControlName="Message_Content"></textarea>
                 </mat-form-field>
             </div>
         </div>
-
 
         <!-- SEND EACH MESSAGE TO EACH CONTACT -->
         <div class="dynamic-inputs" [formGroup]="customForm" *ngIf="!typeOfScreen">
@@ -78,8 +85,16 @@
                     [formGroupName]="i">
                     <mat-label class="contacts-numbers">{{i+1}}-</mat-label>
                     <mat-form-field>
+                        <mat-label>מספר שולח*</mat-label>
+                        <mat-select formControlName="SenderIDFK">
+                            <mat-option *ngFor="let phone of sendersList" [value]="phone.Row_ID">
+                                {{phone.Description}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field>
                         <mat-label>סוג מקבל ההודעה*</mat-label>
-                        <mat-select formControlName="ContactType">
+                        <mat-select formControlName="Recipient_Type">
                             <mat-option value="0">
                                 יחיד
                             </mat-option>
@@ -89,33 +104,32 @@
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field>
-                        <input matInput placeholder="מספר טלפון*" *ngIf="contact.controls['ContactType'].value == '0'"
-                            formControlName="ContactPhoneNumber">
-                        <input matInput placeholder="קוד קבוצה*" *ngIf="contact.controls['ContactType'].value == '1'"
-                            formControlName="ContactPhoneNumber">
+                        <input matInput placeholder="מספר טלפון*"
+                            *ngIf="contact.controls['Recipient_Type'].value == '0'" formControlName="Phone_Number">
+                        <input matInput placeholder="קוד קבוצה*" *ngIf="contact.controls['Recipient_Type'].value == '1'"
+                            formControlName="Phone_Number">
                     </mat-form-field>
                     <mat-form-field>
-                        <input matInput placeholder="שם מקבל ההודעה" formControlName="ContactName">
+                        <input matInput placeholder="שם מקבל ההודעה" formControlName="Recipient">
                     </mat-form-field>
                     <mat-form-field>
-                        <textarea matInput placeholder="תוכן*" formControlName="ContactContent"></textarea>
+                        <textarea matInput placeholder="תוכן ההודעה*" formControlName="Message_Content"></textarea>
                     </mat-form-field>
                     <div>
-                        <button mat-icon-button color="warn" (click)="deleteRow(contact, i)">
+                        <button mat-icon-button color="warn" matTooltip="מחיקה" (click)="deleteRow(contact, i)">
                             <mat-icon>delete</mat-icon>
                         </button>
                     </div>
                 </div>
             </div>
-            <button mat-raised-button style="background-color: #00a884;color: whitesmoke;"
+            <button mat-raised-button style="background-color: #00a884;color: whitesmoke;" matTooltip="הוספה"
                 (click)="addInput()"><mat-icon>add</mat-icon></button>
         </div>
         <div dir="rtl">
             <hr>
             <button mat-raised-button
                 style="background-color: #00a884;color: whitesmoke;margin-top: 20px;transform: rotate(180deg);"
-                (click)="sendMessages()"><mat-icon>send</mat-icon></button>
+                matTooltip="שליחה" (click)="sendMessages()"><mat-icon>send</mat-icon></button>
         </div>
     </div>
-
 </div>
