--- a/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.css
+++ b/src/app/whatsapp-messages-dashboard/whatsapp-messages-dashboard.component.css
@@ -36,6 +36,18 @@ table {
     padding-bottom: 100px;
 }
 
+::ng-deep .mat-progress-bar-fill::after {
+    background-color: #21f106;
+}
+
+::ng-deep .mat-progress-bar-buffer {
+    background: #bff0cd;
+}
+
+::ng-deep .mat-progress-bar {
+    border-radius: 2px;
+}
+
 @media screen and (max-width: 768px) {
     .dynamic-fields {
         display: block;
